# swagger/index.yaml
@@ -137,7 +137,7 @@ definitions:
         type: boolean
         x-isnullable: false
         x-omitempty: false
-      readers:
+      teams:
         type: array
         items:
           type: object
@@ -145,7 +145,10 @@ definitions:
             name:
               type: string
               minLength: 1
-      writers:
+            access:
+              type: string
+              minLength: 1
+      collaborators:
         type: array
         items:
           type: object
@@ -153,20 +156,7 @@ definitions:
             name:
               type: string
               minLength: 1
-      collaboratorreaders:
-        type: array
-        items:
-          type: object
-          properties:
-            name:
-              type: string
-              minLength: 1
-      collaboratorwriters:
-        type: array
-        items:
-          type: object
-          properties:
-            name:
+            access:
               type: string
               minLength: 1
 
